--- a/src/pages/Main/About/index.less
+++ b/src/pages/Main/About/index.less
@@ -1,4 +1,26 @@
 .home {
   width: 100%;
-  height: 700px;
+  height: 880px;
+  .div_main {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .div_main_portrait {
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+    }
+  }
+  .introduce {
+    padding: 0 2rem;
+    font-size: 16px;
+    max-width: 850px;
+    margin: 0 auto;
+    width: 100%;
+    .single_p {
+      margin: 20px 0;
+    }
+  }
 }
