--- a/src/pages/Main/HeaderMenu/index.less
+++ b/src/pages/Main/HeaderMenu/index.less
@@ -1,21 +1,29 @@
 .header_menu {
   height: 100px;
+  width: 100%;
   background-color: #2c3e50;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   color: white;
   align-items: center;
   .header_menu_left {
     color: white;
     font-weight: bold;
     font-size: 30px;
+    position: relative;
+    left: 3%;
     a {
       color: white;
       text-decoration: underline;
+      &:hover {
+        color: blue;
+      }
     }
   }
   .header_menu_right {
     font-size: 25px;
+    position: relative;
+    right: 3%;
   }
   .right_label {
     margin-left: 20px;
@@ -24,4 +32,9 @@
       color: yellow;
     }
   }
+}
+.fixed {
+  position: fixed;
+  top: 0;
+  z-index: 999;
 }
