--- a/src/pages/Main/SampleReels/index.less
+++ b/src/pages/Main/SampleReels/index.less
@@ -3,14 +3,26 @@
   height: 880px;
 }
 .main {
+  display: flex;
 }
 
 .single_img_box {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
+  flex: 33.33%;
   .single_img {
+    width: 100%;
+    height: 100%;
   }
   .single_img_hover {
+    position: relative;
+    bottom: 100%;
+    background: gray;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .single_title {
     }
     .single_introduce {
