--- a/src/components/DivBox/index.less
+++ b/src/components/DivBox/index.less
@@ -6,7 +6,7 @@
   background: white;
   .top_right {
     .ant-btn span {
-      color: @defaultColor;
+      color: @defaultcolor;
     }
   }
   .base_box_top {
