--- a/src/components/DivBox/index.less
+++ b/src/components/DivBox/index.less
@@ -1,4 +1,3 @@
-@defaultcolor:rgb (16, 142, 233);
 .div_base_box {
   width: 100%;
   height: 100%;
@@ -6,7 +5,7 @@
   background: white;
   .top_right {
     .ant-btn span {
-      color: @defaultcolor;
+      color: #108ee9;
     }
   }
   .base_box_top {
