--- a/src/pages/Main/SampleReels/index.less
+++ b/src/pages/Main/SampleReels/index.less
@@ -4,12 +4,16 @@
 }
 .main {
   display: flex;
+  flex-wrap: wrap;
+  height: 100%;
 }
 
 .single_img_box {
-  height: 200px;
-  width: 200px;
+  // height: 200px;
+  // width: 200px;
   flex: 33.33%;
+  padding: 20px;
+  height: 50%;
   .single_img {
     width: 100%;
     height: 100%;
@@ -17,17 +21,23 @@
   .single_img_hover {
     position: relative;
     bottom: 100%;
-    background: gray;
+    background: #808080a6;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    color: #fff;
     .single_title {
+      font-size: 30px;
     }
     .single_introduce {
+      font-size: 20px;
     }
     .single_icon {
+      color: yellow;
+      font-size: 30px;
     }
   }
 }
