--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -2,30 +2,63 @@
   width: 100%;
   height: 100%;
   background-color: white;
-  justify-content: space-evenly;
+  justify-content: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: url(../../assets/img/home/homeBg.jpeg);
   background-size: 100% 100%;
+  color: #fff;
   .hello {
-    font-size: 40px;
-    letter-spacing: 10px;
-    background: linear-gradient(to right, red, blue);
-    -webkit-background-clip: text;
-    color: transparent;
+    font-size: 50px;
+    margin: 20px 0;
+    letter-spacing: 3px;
+    // background: linear-gradient(to right, red, blue);
+    // -webkit-background-clip: text;
+    // color: transparent;
   }
   .profession {
     font-size: 45px;
+    margin: 20px 0;
+    letter-spacing: 3px;
   }
   .button {
+    text-align: center;
     :global {
       .ant-btn {
         width: 200px;
         height: 50px;
         margin-left: 30px;
         font-size: 20px;
+        background: none;
+        border: 2px solid;
+        font: inherit;
+        line-height: 1px;
+        margin: 0.5em;
+        padding: 1em 2em;
+        --color: black;
+        --hover: #e5ff60;
+        color: var(--color);
+        transition: 0.25s;
+        &:hover,
+        &:focus {
+          box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+          transform: translateY(-0.25em);
+        }
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 415px) {
+  .home {
+    .hello {
+      font-size: 20px;
+    }
+    .profession {
+      font-size: 15px;
+    }
+    .button {
     }
   }
 }
