--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -6,3 +6,11 @@ body,
   width: 100%;
   height: 100%;
 }
+
+@media only screen and (max-width: 415px) {
+  .home {
+    .hello {
+      font-size: 20px;
+    }
+  }
+}
